--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=BLUEBIRD;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+        "DefaultConnection": "Data Source=BLUEBIRD;Initial Catalog=HMS;Integrated Security=True;Trust Server Certificate=True"
     }
 }
